--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,23 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  address_id: 1
-  city: MyString
-  state: MyString
-  postal_code: MyString
-  country: MyString
-  timezone: MyString
-  currency: MyString
-  tax_rate: 9.99
-  space_id: 1
-
-two:
-  address_id: 1
-  city: MyString
-  state: MyString
-  postal_code: MyString
-  country: MyString
-  timezone: MyString
-  currency: MyString
-  tax_rate: 9.99
-  space_id: 1
+# This model initially had no columns defined.  If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+#  column: value
